# fir1

./: AUTHORS  CMakeLists.txt  COPYING  Doxyfile  Fir1.cpp  Fir1.h  Fir1fixed.cpp  Fir1fixed.h  MANIFEST.in  Makefile  Makefile.am  Makefile.in  README  README.md  README_py  README_py.rst  config.h  config.status  configure  configure.ac  fir.pc  fir.pc.in  fir1.i  fir_lms.cdr  firconfig.h  libfir.la  libtool  setup.py  stamp-h2
Firj/: build.gradle  settings.gradle
Firj/firj/: CMakeLists.txt  build.gradle
Firj/firj/src/androidTest/java/uk/me/berndporr/firj/: ExampleInstrumentedTest.java  InstrumentedTest.java
Firj/firj/src/main/: AndroidManifest.xml
Firj/firj/src/main/cpp/: fir.cpp  firwrapper.cpp  firwrapper.h
Firj/firj/src/main/java/uk/me/berndporr/firj/: Fir.java  Fir1.java
Firj/firj/src/main/res/values/: strings.xml
Firj/firj/src/test/java/uk/me/berndporr/firj/: ExampleUnitTest.java
Firj/gradle/wrapper/: gradle-wrapper.properties
autom4te.cache/: output.0  requests  traces.0  traces.1
demo/: CMakeLists.txt  Makefile  README  README.md  coeffarraydemo.cpp  create_bandstop_coeff.m  create_bandstop_coeff.py  filter_ecg.py  firdemo.cpp  fixeddemo.cpp  lms_50Hz_ecg_filter.py  lmsdemo.cpp
docs/: Fir1_8h_source.html  annotated.html  classFir1-members.html  classFir1.html  classes.html  files.html  functions.html  functions_func.html  index.html  md_README.html  menudata.js  pages.html
docs/pdf/: .gitignore  annotated.tex  classFir1.tex  md_README.tex  refman.tex
docs/rtf/: refman.rtf
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js
fir/: Fir1.cpp  Fir1.cpp~  Fir1.lo
fir/.deps/: Fir1.Plo
test/: CMakeLists.txt  assert_print.h  coeffread.cpp  fixed.cpp  getcoeff.cpp  getcoeffvector.cpp  impstep.cpp  initavg.cpp  lms.cpp  step.cpp
winfir1/: fir1.sln  firdemo.vcxproj  firdemo.vcxproj.filters  fixeddemo.vcxproj  libfir1.vcxproj  libfir1.vcxproj.filters
